Minor text changes

--- a/_posts/2014-04-02-newsite.markdown
+++ b/_posts/2014-04-02-newsite.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Somethings Comming..."
+title:  "Somethings Coming..."
 date:   2014-02-04 15:17:53
 categories: jekyll update
 ---
