IA work on ABOUT and GET INVOLVED

--- a/todo
+++ b/todo
@@ -5,3 +5,16 @@
 4. Events
 5. Community (photos)
 6. Registration
+
+## Home
+banner selected news (reunion weekend and others)
+invitations
+call for registrations
+
+## About
+hist
+anthem
+colors
+address
+manifest/goal
+
